# DMAF

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SECURITY.md  cloudbuild.yaml  config.cloud.example.yaml  config.example.yaml  config.yaml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/: DEPLOYMENT.md  IMPLEMENTATION_STATUS.md
deploy/: README.md  mcp-setup.md  openclaw-integration.md  setup-secrets.md
deploy/openclaw-skill/: SKILL.md
deploy/openclaw-skill/references/: ops.md  setup.md
deploy/openclaw-skill/scripts/: dmaf-sync.sh
project/: config.yaml  face_index.py  face_index_face_recog.py  face_index_insight_face.py  main.py  photos_api.py
scripts/: README.md  benchmark_augmentation.py  benchmark_backends.py  debug_missed_detections.py  generate_social_preview.py
src/dmaf/: __init__.py  __main__.py  config.py  database.py  gcs_watcher.py  known_refresh.py  mcp_server.py  video_processor.py  watcher.py
src/dmaf/alerting/: __init__.py  alert_manager.py  email_sender.py  templates.py
src/dmaf/face_recognition/: __init__.py  augmentation.py  auraface_backend.py  dlib_backend.py  factory.py  insightface_backend.py
src/dmaf/google_photos/: __init__.py  api.py
src/dmaf/utils/: __init__.py
src/wa_automate/: __init__.py  __main__.py  config.py  database.py  watcher.py
src/wa_automate/face_recognition/: __init__.py  augmentation.py  dlib_backend.py  factory.py  insightface_backend.py
src/wa_automate/google_photos/: __init__.py  api.py
src/wa_automate/utils/: __init__.py  retry.py
tests/: __init__.py  augmentation_utils.py  conftest.py  test_alerting.py  test_augmentation_comparison.py  test_auraface_backend.py  test_backend_comparison.py  test_config.py  test_database.py  test_dlib_backend.py  test_factory.py  test_gcs_watcher.py  test_google_photos_api.py  test_insightface_backend.py  test_known_refresh.py  test_main.py  test_mcp_server.py  test_retry.py  test_video_processor.py  test_watcher.py
